--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,38 @@ NOTE: [*] Indicated fork unique change
 
 Changelog
 ---------
+374.43_2-25E1j9527  (15-May-2017)
+* NEW: haveged: add support version 1.9.1
+* NEW: https: support moving https cert to jffs
+* NEW: wl: (experimental) dfs channel support for ac66, ac56, including auto select dfs channels
+* CHANGED: openvpn: update to 2.4.2
+* CHANGED: dnsmasq: update to 2.77rc3
+* CHANGED: libsodium: update to 1.0.12
+* CHANGED: nano: update to 2.8.1
+* CHANGED: haveged: optimize configs for mips vs arm
+* CHANGED: webui: allow 5min for firware upgrade to complete
+* CHANGED: init: extend default reboot time for ARM routers by 20sec
+* CHANGED: webui: remove nvram warning from https save
+* CHANGED: webui: update time in firmware upgrade message
+* CHANGED: openvpn: set persist-tun for all dns configs if not dual-wan, do not set for dual-wan
+* CHANGED: webui: add popup help for IPTV emf/igmp snooping
+- CHANGED: openvpn: (backport) implement importing of reneg-sec parameter from ovpn file
+- CHANGED: webui: (backport) ASUS xxs_blacklist checking
+- CHANGED: network: (backport) disable bridge multicast_snooping by default
+- CHANGED: webui: add bridge multicast option to IPTV page
+- CHANGED: shared: (backport) add string function to escape special chars for use in webui
+- CHANGED: webui: (backport) make cipher and digest checks non case-sensitive on OpenVPN client
+- CHANGED: webui: add connecting state on vpn status page
+- FIXED: webui: (backport) ASUS fix for CVE-2017-5891, CVE-2017-5892
+- FIXED: webui: (backport) fix variable reuse which was breaking support for multi-partition USB disks
+- FIXED: shared: (backport) ensure that get_parsed_crt() always initializes the buffer
+- FIXED: openvpn: (backport) prevent potential out-of-bound buffer access on key/certs
+- FIXED: webui: (backport) fix variable reuse which was breaking support for multi-partition USB disks
+- FIXED: mssl: (backport) disable all 3DES ciphers
+- FIXED: services: (backport) only restart upnpd with nasapps if already started
+- FIXED: firewall: (backport) only restart upnpd if already active
+
+
 374.43_2-24E4j9527  (24-April-2017)
 * CHANGED: usb: remove old minidlna dbdir if set to new location
 * CHANGED: usb: only use default of /tmp/mnt for media dir if no dirs specified
